Add optional approval message
