# grading-admin-service/src/main/java/edu/mines/gradingadmin/controllers/InstructorApiImpl.java
@@ -115,7 +115,7 @@ public class InstructorApiImpl implements InstructorApiDelegate {
     }
 
     @Override
-    public ResponseEntity<LateRequestDTO> approveExtension(String courseId, String assignmentId, String userId, String extensionId) {
+    public ResponseEntity<LateRequestDTO> approveExtension(String courseId, String assignmentId, String userId, String extensionId, String reason) {
         Optional<Course> course = courseService.getCourse(UUID.fromString(courseId));
 
         if(course.isEmpty()) {
@@ -123,7 +123,7 @@ public class InstructorApiImpl implements InstructorApiDelegate {
             return ResponseEntity.badRequest().build();
         }
 
-        Optional<LateRequest> lateRequest = extensionService.approveExtension(assignmentId, userId, extensionId);
+        Optional<LateRequest> lateRequest = extensionService.approveExtension(assignmentId, userId, extensionId, reason);
 
         if(lateRequest.isEmpty()) {
             // need to do this with error controller
