# packtrain-frontend/packages/api/src/openapi.json
@@ -1622,6 +1622,15 @@
               "type": "string",
               "example": "99-9999-9999-99"
             }
+          },
+          {
+            "name": "reason",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "Good extension"
+            }
           }
         ],
         "responses": {
